running-simple-elasticsearch-and-kibana-example/kibana-deployment-and-service.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kibana-deployment
spec:
  selector:
    matchLabels:
      app: kibana
  replicas: 1
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
        - name: kibana
          image: kibana:6.8.6
          ports:
            - containerPort: 5601
---

kind: Service
apiVersion: v1
metadata:
  name: kibana-service
spec:
  selector:
    app: kibana
  ports:
    - port: 5601
