running-simple-elasticsearch-and-kibana-example/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: elasticsearch-ingress
spec:
  rules:
    - http:
        paths:
          - path: /elasticsearch
            backend:
              serviceName: elasticsearch-service
              servicePort: 9200
          - path: /kibana
            backend:
              serviceName: kibana-service
              servicePort: 5601
